// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountFees renders discounted base fee 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

<div>
  <div
    class="account-fees"
  >
    <hr
      aria-orientation="horizontal"
      class="components-divider components-card__divider components-card-divider emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="CardDivider"
      role="separator"
    />
    <h4>
      Active discounts
    </h4>
  </div>
  <p>
    Card transactions
    :
  </p>
  United States (US) dollar 
  (USD) 
  <s>
    2.9% + $0.30 per transaction
  </s>
   2% + $0.20 per transaction
  <div
    class="progressbar"
  >
    <div
      class="progressbar__container"
    >
      <div
        class="progressbar__inner"
        style="width: 1.234556%;"
      />
      <span
        class="progressbar__outer-progress-label"
      >
        $12,345.56
      </span>
    </div>
    <span
      class="progressbar__total-label"
    >
      $1,000,000.00
    </span>
  </div>
  <p
    class="description"
  >
    Discounted base fee expires after the first $1,000,000.00 of total payment volume.
  </p>
</div>
`;

exports[`AccountFees renders discounted fee with USD volume currency and non-USD base fee 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

<div>
  <div
    class="account-fees"
  >
    <hr
      aria-orientation="horizontal"
      class="components-divider components-card__divider components-card-divider emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="CardDivider"
      role="separator"
    />
    <h4>
      Active discounts
    </h4>
  </div>
  <p>
    Card transactions
    :
  </p>
  Pound sterling 
  (GBP) 
  <s>
    1.4% + £0.20 per transaction
  </s>
   0.7% + £0.10 per transaction
  <div
    class="progressbar"
  >
    <div
      class="progressbar__container"
    >
      <div
        class="progressbar__inner"
        style="width: 1.234556%;"
      />
      <span
        class="progressbar__outer-progress-label"
      >
        $12,345.56
      </span>
    </div>
    <span
      class="progressbar__total-label"
    >
      $1,000,000.00
    </span>
  </div>
  <p
    class="description"
  >
    Discounted base fee expires after the first $1,000,000.00 of total payment volume.
  </p>
</div>
`;

exports[`AccountFees renders discounted fee with end date 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

<div>
  <div
    class="account-fees"
  >
    <hr
      aria-orientation="horizontal"
      class="components-divider components-card__divider components-card-divider emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="CardDivider"
      role="separator"
    />
    <h4>
      Active discounts
    </h4>
  </div>
  <p>
    Card transactions
    :
  </p>
  United States (US) dollar 
  (USD) 
  <s>
    2.9% + $0.30 per transaction
  </s>
   2.03% + $0.21 per transaction (30% discount)
  <p
    class="description"
  >
    Discounted base fee expires on March 31, 2025.
  </p>
</div>
`;

exports[`AccountFees renders discounted fee with volume limit 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

<div>
  <div
    class="account-fees"
  >
    <hr
      aria-orientation="horizontal"
      class="components-divider components-card__divider components-card-divider emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="CardDivider"
      role="separator"
    />
    <h4>
      Active discounts
    </h4>
  </div>
  <p>
    Card transactions
    :
  </p>
  United States (US) dollar 
  (USD) 
  <s>
    2.9% + $0.30 per transaction
  </s>
   2.03% + $0.21 per transaction (30% discount)
  <div
    class="progressbar"
  >
    <div
      class="progressbar__container"
    >
      <div
        class="progressbar__inner"
        style="width: 49.382239999999996%;"
      />
      <span
        class="progressbar__outer-progress-label"
      >
        $12,345.56
      </span>
    </div>
    <span
      class="progressbar__total-label"
    >
      $25,000.00
    </span>
  </div>
  <p
    class="description"
  >
    Discounted base fee expires after the first $25,000.00 of total payment volume.
  </p>
</div>
`;

exports[`AccountFees renders discounted fee with volume limit and end date 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

<div>
  <div
    class="account-fees"
  >
    <hr
      aria-orientation="horizontal"
      class="components-divider components-card__divider components-card-divider emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="CardDivider"
      role="separator"
    />
    <h4>
      Active discounts
    </h4>
  </div>
  <p>
    Card transactions
    :
  </p>
  United States (US) dollar 
  (USD) 
  <s>
    2.9% + $0.30 per transaction
  </s>
   2.03% + $0.21 per transaction (30% discount)
  <div
    class="progressbar"
  >
    <div
      class="progressbar__container"
    >
      <div
        class="progressbar__inner"
        style="width: 49.382239999999996%;"
      />
      <span
        class="progressbar__outer-progress-label"
      >
        $12,345.56
      </span>
    </div>
    <span
      class="progressbar__total-label"
    >
      $25,000.00
    </span>
  </div>
  <p
    class="description"
  >
    Discounted base fee expires after the first $25,000.00 of total payment volume or on March 31, 2025.
  </p>
</div>
`;

exports[`AccountFees renders discounted fee without volume limit 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

<div>
  <div
    class="account-fees"
  >
    <hr
      aria-orientation="horizontal"
      class="components-divider components-card__divider components-card-divider emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="CardDivider"
      role="separator"
    />
    <h4>
      Active discounts
    </h4>
  </div>
  <p>
    Card transactions
    :
  </p>
  United States (US) dollar 
  (USD) 
  <s>
    2.9% + $0.30 per transaction
  </s>
   2.03% + $0.21 per transaction (30% discount)
</div>
`;

exports[`AccountFees renders discounted non-USD base fee 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

<div>
  <div
    class="account-fees"
  >
    <hr
      aria-orientation="horizontal"
      class="components-divider components-card__divider components-card-divider emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="CardDivider"
      role="separator"
    />
    <h4>
      Active discounts
    </h4>
  </div>
  <p>
    Card transactions
    :
  </p>
  Pound sterling 
  (GBP) 
  <s>
    1.4% + £0.20 per transaction
  </s>
   0.7% + £0.10 per transaction
  <div
    class="progressbar"
  >
    <div
      class="progressbar__container"
    >
      <div
        class="progressbar__inner"
        style="width: 1.234556%;"
      />
      <span
        class="progressbar__outer-progress-label"
      >
        £12,345.56
      </span>
    </div>
    <span
      class="progressbar__total-label"
    >
      £1,000,000.00
    </span>
  </div>
  <p
    class="description"
  >
    Discounted base fee expires after the first £1,000,000.00 of total payment volume.
  </p>
</div>
`;

exports[`AccountFees renders discounts multiple payment methods 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

<div>
  <div
    class="account-fees"
  >
    <hr
      aria-orientation="horizontal"
      class="components-divider components-card__divider components-card-divider emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="CardDivider"
      role="separator"
    />
    <h4>
      Active discounts
    </h4>
  </div>
  <p>
    Card transactions
    :
  </p>
  United States (US) dollar 
  (USD) 
  <s>
    2.9% + $0.30 per transaction
  </s>
   1.4% + $0.25 per transaction
  <p>
    giropay transactions
    :
  </p>
  United States (US) dollar 
  (USD) 
  <s>
    1.4% + $0.30 per transaction
  </s>
   1.4% + $0.25 per transaction
  <p>
    Sofort transactions
    :
  </p>
  United States (US) dollar 
  (USD) 
  <s>
    1.4% + $0.30 per transaction
  </s>
   1.4% + $0.25 per transaction
</div>
`;

exports[`AccountFees renders first discounted fee ignoring the rest 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

<div>
  <div
    class="account-fees"
  >
    <hr
      aria-orientation="horizontal"
      class="components-divider components-card__divider components-card-divider emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="CardDivider"
      role="separator"
    />
    <h4>
      Active discounts
    </h4>
  </div>
  <p>
    Card transactions
    :
  </p>
  United States (US) dollar 
  (USD) 
  <s>
    2.9% + $0.30 per transaction
  </s>
   2.32% + $0.24 per transaction (20% discount)
</div>
`;

exports[`AccountFees renders non-USD base fee 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

<div>
  <div
    class="account-fees"
  >
    <hr
      aria-orientation="horizontal"
      class="components-divider components-card__divider components-card-divider emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="CardDivider"
      role="separator"
    />
    <h4>
      Active discounts
    </h4>
  </div>
  <p>
    Card transactions
    :
  </p>
  Euro 
  (EUR) 
  <s>
    2.9% + 0,25 € per transaction
  </s>
   2.9% + 0,30 € per transaction
</div>
`;

exports[`AccountFees renders normal base fee 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

<div>
  <div
    class="account-fees"
  >
    <hr
      aria-orientation="horizontal"
      class="components-divider components-card__divider components-card-divider emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="CardDivider"
      role="separator"
    />
    <h4>
      Active discounts
    </h4>
  </div>
  <p>
    Card transactions
    :
  </p>
  United States (US) dollar 
  (USD) 
  <s>
    2.9% + $0.30 per transaction
  </s>
   2.9% + $0.30 per transaction
</div>
`;

exports[`AccountFees renders without any discounts 1`] = `<div />`;
